--- a/index.html
+++ b/index.html
@@ -187,9 +187,16 @@
     <!-- 轮播图区域 -->
     <section>
         <div class="slider">
+            <div><img src="./assets/医院全貌.jpg" alt="医院全貌"></div>
             <div><img src="./assets/环境1.jpg" alt="医院环境图1"></div>
             <div><img src="./assets/环境4.jpg" alt="医院环境图2"></div>
             <div><img src="./assets/环境5.jpg" alt="医院环境图3"></div>
+            <div><img src="./assets/环境6.jpg" alt="医院环境图4"></div>
+            <div><img src="./assets/中药房.jpg" alt="中药房"></div>
+            <div><img src="./assets/中药存放.jpg" alt="中药存放"></div>
+            <div><img src="./assets/中药详解.jpg" alt="中药详解"></div>
+            <div><img src="./assets/小知识1.jpg" alt="小知识1"></div>
+            <div><img src="./assets/小知识2.jpg" alt="小知识2"></div>
         </div>
     </section>
 
